<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.example.simplecompassproject.ui.compass.CompassViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.compass.CompassActivity">

        <ImageView
                android:id="@+id/compassDialIv"
                android:layout_width="wrap_content"
                android:layout_height="420dp"
                android:padding="@dimen/margin_l"
                android:contentDescription="@string/compass_dial"
                android:src="@drawable/ic_compass_dial"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/margin_l"
                app:layout_constraintBottom_toTopOf="@id/compassNavigateToB"/>

        <ImageView
                android:id="@+id/compassHandsIv"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_ml"
                android:contentDescription="@string/compass_hands"
                android:scaleType="fitXY"
                android:src="@drawable/ic_compass_hands"
                app:layout_constraintTop_toTopOf="@+id/compassDialIv"
                app:layout_constraintEnd_toEndOf="@+id/compassDialIv"
                app:layout_constraintStart_toStartOf="@+id/compassDialIv"
                app:layout_constraintBottom_toBottomOf="@+id/compassDialIv"/>

        <Button
                android:id="@+id/compassNavigateToB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/margin_l"
                android:background="@drawable/bg_rounded_blue_button"
                android:onClick="@{() -> viewModel.showNavigateLatLngDialog()}"
                android:text="@string/compass_navigate_to"
                android:textColor="@color/white"
                android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>