<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.example.simplecompassproject.ui.navigateLatLng.NavigateLatLngViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_white">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topBarCL"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_dialog_top_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/margin_l"
                    android:contentDescription="@string/back"
                    android:onClick="@{() -> viewModel.closeDialog()}"
                    app:srcCompat="@drawable/ic_close"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    android:text="@string/compass_navigate_to"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_big"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    android:layout_marginEnd="@dimen/margin_xl"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/navigateLatitudeTil"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_xl"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                app:layout_constraintTop_toBottomOf="@id/topBarCL">
            <!--TODO create styles for texts instead of setting every time a property in View-->
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/navigateLatitudeTied"
                    style="@style/CoordinatesEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/navigate_latitude_hint_text"
                    android:maxLength="12"
                    android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/navigateLongitudeTil"
                style="@style/TextInputLayoutAppearance"
                android:layout_width="0dp"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                app:layout_constraintTop_toBottomOf="@id/navigateLatitudeTil"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/CoordinatesEditTextStyle"
                    android:id="@+id/navigateLongitudeTied"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="13"
                    android:hint="@string/navigate_longitude_hint_text"
                    android:imeOptions="actionGo"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/navigateToNorthB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_l"
                android:paddingStart="@dimen/padding_l"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/navigateLongitudeTil"
                android:background="@drawable/bg_rounded_blue_button"
                android:text="@string/navigate_to_north"
                android:drawableEnd="@drawable/ic_north_compass"
                android:onClick="@{() -> viewModel.navigateToNorth()}"
                android:drawablePadding="@dimen/padding_l"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/navigateAcceptAndNavigate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/margin_xl"
                app:layout_constraintTop_toBottomOf="@id/navigateToNorthB"
                android:background="@drawable/bg_accept_navigation_button"
                android:text="@string/navigate_accept_button_text"
                android:textColor="@color/white"
                android:onClick="@{() -> viewModel.acceptAndNavigate()}"
                android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>